logic/src/parse/snapshots/logic__parse__ui__invalid_brackets3-2.snap
---
source: logic/src/parse/ui.rs
assertion_line: 51
expression: "ui_test(\"(((((((())\".to_string())"

---
error: Mismatching brackets!
  ┌─ file:1:6
  │
1 │ (((((((())
  │      ^ This bracket is opened, but it is never closed


